--- a/index.css
+++ b/index.css
@@ -5,6 +5,17 @@ body {
   height: 100vh;
 }
 
+#github {
+  background-image: url(./Github-Mark.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 70px;
+  height: 70px;
+}
+
 a {
 	color: #18272F;
   position: relative;
